# Follyo

./: .gitignore  .golangci.yml  CLAUDE.md  LICENSE  NOTES.md  PLAN_TUI.md  PROJECT_INDEX.md  README.md  REFACTORING_PLAN.md  go.mod  go.sum  pyproject.toml
.beads/: issues.jsonl
.github/: copilot-instructions.md
.github/workflows/: golangcli-lint.yml
cmd/follyo/: buy.go  commands_test.go  config.go  helpers.go  helpers_test.go  loan.go  main.go  sell.go  snapshot.go  snapshot_test.go  stake.go  summary.go  ticker.go  tui.go  watch.go  watch_test.go
cmd/follyo/tui/: app.go  app_test.go  constants.go  constants_test.go  doc.go  keys.go  messages.go  registry.go  styles.go
cmd/follyo/tui/components/: doc.go  form.go  form_test.go  help.go  help_test.go  navigation.go  navigation_test.go  table.go  table_test.go
cmd/follyo/tui/format/: doc.go  errors.go  errors_test.go  format.go  format_test.go
cmd/follyo/tui/views/: buy.go  buy_test.go  coinhistory.go  coinhistory_charts.go  coinhistory_tables.go  doc.go  (+18 more)
follyo/: __init__.py  cli.py  models.py  portfolio.py  storage.py
internal/config/: config.go  config_test.go  doc.go
internal/integration/: integration_test.go
internal/models/: doc.go  models.go  models_test.go  snapshot.go
internal/portfolio/: doc.go  errors.go  errors_test.go  interfaces.go  mock.go  mock_test.go  portfolio.go  portfolio_test.go  snapshot.go  snapshot_test.go
internal/prices/: doc.go  prices.go  prices_test.go
internal/storage/: crud.go  crud_test.go  doc.go  snapshots.go  snapshots_test.go  storage.go  storage_test.go
