[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "follyo"
version = "0.1.0"
description = "Personal Crypto Portfolio Tracker"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
follyo = "follyo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
